--- a/index.html
+++ b/index.html
@@ -90,38 +90,38 @@
                 <h2 class="production__title">Продукция</h2>
                 <div class="production__box">
                     <div class="production__box-item">
-                        <img src="/css/image/products/prod1.svg" alt="" class="production__box-item-img">
+                        <img src="./css/image/products/prod1.svg" alt="" class="production__box-item-img">
                         <div class="production__box-item-text">
                             <p class="production__box-item-title">Сигнализатор уровня</p>
                             <a href="" class="production__box-item-btn">Подробнее</a>
                         </div>
                     </div>
                     <div class="production__box-item">
-                        <img src="/css/image/products/prod2.svg" alt="" class="production__box-item-img">
+                        <img src="./css/image/products/prod2.svg" alt="" class="production__box-item-img">
                         <p class="production__box-item-title">Сигнализатор уровня</p>
                         <a href="" class="production__box-item-btn">Подробнее</a>
                     </div>
                     <div class="production__box-item">
-                        <img src="/css/image/products/prod3.svg" alt="" class="production__box-item-img">
+                        <img src="./css/image/products/prod3.svg" alt="" class="production__box-item-img">
                             <div class="production__box-item-text">
                                 <p class="production__box-item-title">Сигнализатор уровня</p>
                                 <a href="" class="production__box-item-btn">Подробнее</a>
                             </div>
                     </div>
                     <div class="production__box-item">
-                        <img src="/css/image/products/prod4.svg" alt="" class="production__box-item-img">
+                        <img src="./css/image/products/prod4.svg" alt="" class="production__box-item-img">
                         <div class="production__box-item-text">
                             <p class="production__box-item-title">Сигнализатор уровня</p>
                             <a href="" class="production__box-item-btn">Подробнее</a>
                         </div>
                     </div>
                     <div class="production__box-item">
-                        <img src="/css/image/products/prod5.svg" alt="" class="production__box-item-img">
+                        <img src="./css/image/products/prod5.svg" alt="" class="production__box-item-img">
                         <p class="production__box-item-title">Сигнализатор уровня</p>
                         <a href="" class="production__box-item-btn">Подробнее</a>
                     </div>
                     <div class="production__box-item">
-                        <img src="/css/image/products/prod6.svg" alt="" class="production__box-item-img">
+                        <img src="./css/image/products/prod6.svg" alt="" class="production__box-item-img">
                         <p class="production__box-item-title">Сигнализатор уровня</p>
                         <a href="" class="production__box-item-btn">Подробнее</a>
                     </div>
